# string_properties

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/meta/: meta.h  meta_detail.h
src/: meta.cpp
tests/: tests.cpp
